# test_backend

./: .env.example  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  README.md  TASK_COMPLETION_STATUS.md  pyproject.toml  pytest.ini
.cursor/rules/: python.mdc  specify-rules.mdc
.specify/: QUICK_REFERENCE.md  README.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/templates/commands/: constitution.md
authentication/: models.py  serializers.py  urls.py  utils.py  views.py
authentication/management/commands/: cleanup_blacklist.py
authentication/migrations/: 0001_initial.py  0002_seed_test_users.py
authentication/tests/: test_blacklist.py  test_delete_account.py  test_login.py  test_logout.py  test_models.py  test_profile.py  test_serializers.py  test_views.py
authorization/: models.py  serializers.py  urls.py  views.py
authorization/migrations/: 0001_initial.py  0002_seed_roles.py  0003_seed_business_elements.py  0004_seed_access_rules.py
config/: settings.py  urls.py
core/: authentication.py  constants.py  exceptions.py  jwt_utils.py  permissions.py  utils.py
core/tests/: test_authentication.py  test_exceptions.py  test_jwt_utils.py  test_utils.py
resources/: serializers.py  urls.py  views.py
specs/001-custom-auth-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-custom-auth-system/checklists/: requirements.md
specs/001-custom-auth-system/contracts/: openapi.yaml
